# kelicloud-agent-rs

./: Cargo.toml  README.md  install.sh
docs/: ktp-benchmarks.md  smoke-compatibility.md
scripts/: canary-install.sh  ktp-carrier-matrix.sh  ktp-codec-matrix.sh  ktp-live-canary-evidence.sh  ktp-local-backend-matrix.sh  ktp-local-backend-tunnel-matrix.sh  ktp-relay-batch-matrix.sh  live-panel-control-smoke.sh  real-host-control-canary.sh  smoke-live.sh  smoke-local-backend.sh  tunnel-relay-local-smoke.sh
src/: admin_terminal_smoke.rs  auto_discovery.rs  backend_protocol_smoke.rs  cn_connectivity.rs  config.rs  ktp.rs  ktp_transport.rs  lib.rs  linux_proc.rs  main.rs  net_static.rs  ping.rs  protocol.rs  report.rs  runtime.rs  smoke_summary.rs  system.rs  task.rs  terminal.rs  token.rs  transport.rs  tunnel_async_runtime.rs  tunnel_control.rs  tunnel_data.rs  tunnel_preflight.rs  tunnel_runtime.rs  tunnel_session.rs
tests/: admin_terminal_smoke.rs  auto_discovery.rs  backend_protocol_smoke.rs  canary_install_script.rs  ci_workflow.rs  cli_version.rs  cn_connectivity.rs  config.rs  install_script.rs  ktp.rs  ktp_batch_matrix_script.rs  ktp_bench_cli.rs  ktp_carrier_matrix_script.rs  ktp_carrier_matrix_summary_cli.rs  ktp_codec_bench_cli.rs  ktp_codec_matrix_script.rs  ktp_e2e_bench_cli.rs  ktp_live_canary_script.rs  ktp_local_backend_matrix_script.rs  ktp_local_backend_matrix_summary_cli.rs  ktp_local_backend_tunnel_matrix_script.rs  ktp_policy_summary_cli.rs  ktp_transport.rs  ktp_tunnel_matrix_summary_cli.rs  linux_proc.rs  live_panel_control_smoke_script.rs  ping.rs  (+23 more)
(+39 files in other folders)
