[package]
name = "kelicloud-agent-rs"
version = "0.1.0"
edition = "2021"
license = "MIT"

[lib]
name = "kelicloud_agent_rs"
path = "src/lib.rs"

[[bin]]
name = "kelicloud-agent-rs"
path = "src/main.rs"

[dependencies]
chrono = { version = "0.4", default-features = false, features = ["clock"] }
reqwest = { version = "0.12", default-features = false, features = ["blocking", "json", "rustls-tls"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sysinfo = "0.37"
tungstenite = { version = "0.28", features = ["rustls-tls-webpki-roots"] }
