[package]
name = "kelicloud-agent-rs"
version = "0.2.6"
edition = "2021"
license = "MIT"

[lib]
name = "kelicloud_agent_rs"
path = "src/lib.rs"

[[bin]]
name = "kelicloud-agent-rs"
path = "src/main.rs"

[dependencies]
chacha20poly1305 = "0.10"
chrono = { version = "0.4", default-features = false, features = ["clock"] }
getrandom = "0.3"
hmac = "0.12"
idna = "1"
libc = "0.2"
portable-pty = "0.8"
reqwest = { version = "0.12", default-features = false, features = ["blocking", "json", "rustls-tls"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
sysinfo = "0.37"
tokio = { version = "1", features = ["rt-multi-thread", "net", "sync", "io-util", "time"] }
tungstenite = { version = "0.28", features = ["rustls-tls-webpki-roots"] }
